# trait-bound-typemap

./: Cargo.toml  README.md
src/: base.rs  entry.rs  lib.rs  macros.rs  tests.rs  type_indexed.rs  typemap_trait.rs
src/trait_maps/: clone_send_sync_typemap.rs  clone_typemap.rs  mod.rs  partialeq_typemap.rs  send_sync_typemap.rs  typemap.rs
