[package]
name = "trait-bound-typemap"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "A crate to create typemaps with additional trait restrictions and implementations"
repository = "https://github.com/Trivernis/trait-bound-typemap"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multi-trait-object = "0.2.0"